Migrated towards generalized plots framework